# wd

./: .gitignore  Cargo.toml  LICENSE  README.md  problems_to_fix.md
debian/: control  postinst  wd.desktop  wd.service
src/: annotation.rs  cli.rs  config.rs  daemon.rs  hotkey.rs  lookup.rs  main.rs  popup.rs  selection.rs  types.rs  wiktionary.rs  wordnet.rs
