[package]
name = "wd"
version = "0.1.0"
edition = "2021"
authors = ["Sourav Tripathy"]
description = "A lightweight word-lookup daemon and CLI tool for Linux"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Sourav-Tripathy/wd"

[[bin]]
name = "wd"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# X11 integration for selection watching and global hotkeys
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

# DBus client for PDF viewer annotation (Evince/Okular)
zbus = { version = "4", default-features = false, features = ["tokio"] }

# GTK4 popup window rendering
gtk4 = "0.8"

# Async runtime for daemon event loop
tokio = { version = "1", features = ["full"] }

# Minimal blocking HTTP for Wiktionary REST API (uses rustls, no OpenSSL)
ureq = { version = "2", features = ["json"] }

# Serialization/deserialization for Wiktionary JSON and config.toml
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file parsing
toml = "0.8"

# Desktop notification fallback
notify-rust = "4"

# Memory-mapped file I/O for WordNet index
memmap2 = "0.9"

# Logging
log = "0.4"
env_logger = "0.11"

# XDG directories
dirs = "5"

[package.metadata.deb]
name = "wd"
maintainer = "Sourav Tripathy"
copyright = "2026, Sourav Tripathy"
depends = "libgtk-4-1, libdbus-1-3, libglib2.0-0, wordnet-base | wd-wordnet-data"
section = "utils"
priority = "optional"
assets = [
    ["target/release/wd", "usr/bin/", "755"],
    ["debian/wd.service", "usr/lib/systemd/user/", "644"],
    ["debian/wd.desktop", "etc/xdg/autostart/", "644"],
    ["README.md", "usr/share/doc/wd/", "644"],
]
maintainer-scripts = "debian/"

[profile.release]
opt-level = "s"
lto = true
strip = true
